--- a/register_login/accounts/templates/accounts/register.html
+++ b/register_login/accounts/templates/accounts/register.html
@@ -1,41 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <style>
-        .container{
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-    <h1>Register</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        <label for="username">Username</label><br>
-        {{form.username}} <br>
-        <label for="email">Email</label><br>
-        {{form.email}} <br>
-        <label for="password1">Password</label><br>
-        {{form.password1}} <br>
-        <label for="password2">Confirm Password</label><br>
-        {{form.password2}} <br>
+{% extends 'accounts/base.html' %}
 
-        {% if form.errors %}
-        {% for field in form %}
-            {% for error in field.errors %}
-                {{ error|escape }}
-            {% endfor %}
-        {% endfor %}
-        {% for error in form.non_field_errors %}
-            {{ error|escape }}
-        {% endfor %}
-        {% endif %} <br><br>
-        <input type="submit" value="Register">
-    </form>
-</div>
-</body>
-</html>
+{% block content %}
+<section class="login-block">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 login-sec">
+                <h1>Register</h1>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <label for="username">Username</label><br>
+                    {{form.username}} <br>
+                    <label for="email">Email</label><br>
+                    {{form.email}} <br>
+                    <label for="password1">Password</label><br>
+                    {{form.password1}} <br>
+                    <label for="password2">Confirm Password</label><br>
+                    {{form.password2}} <br>
+
+                    {% if form.errors %}
+                    {% for field in form %}
+                    {% for error in field.errors %}
+                    {{ error|escape }}
+                    {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                    {{ error|escape }}
+                    {% endfor %}
+                    {% endif %} <br><br>
+                    <div class="form-check">
+                    <button type="submit" class="btn btn-login float-right">Register</button>
+                    <a href="{% url 'login' %}" style="margin-left: 100px; margin-top: -50px;">Login</a>
+                    </div>
+                </form>
+            </div>
+                <div class="col-md-8 banner-sec">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img class="d-block img-fluid"
+                                    src="https://static.pexels.com/photos/33972/pexels-photo.jpg" alt="First slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <div class="banner-text">
+                                        <h2>Diabetis Prediction</h2>
+                                        <p>Diabetis Prediction with gaussian naive bayes.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+{% endblock content %}
