--- a/register_login/accounts/templates/accounts/login.html
+++ b/register_login/accounts/templates/accounts/login.html
@@ -1,31 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <style>
-        .container{
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
+
+{% extends 'accounts/base.html' %}
+
+{% block content %}
+
+
+<section class="login-block">
+
     <div class="container">
-    <h1>Login</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        <label for="username">Username</label><br>
-        <input type="text" name="username"><br>
-        <label for="password">Password</label><br>
-        <input type="password" name="password"><br>
+        <div class="row">
+            <div class="col-md-4 login-sec">
+            <h1>Login</h1>
+            <form action="" method="post">
+                {% csrf_token %}
+                <label for="username" class="">Username</label><br>
+                <input type="text" class="form-control" name="username"><br>
+                <label for="password">Password</label><br>
+                <input type="password" class="form-control" name="password"><br>
 
-        {% for message in messages %}
-        {{message}}
-        {% endfor %} <br><br>
+                {% for message in messages %}
+                {{message}}
+                {% endfor %} <br><br>
 
-        <input type="submit" value="Login">
-    </form>
-</div>
-</body>
-</html>
+                <button type="submit" class="btn btn-login float-right">Login</button>
+            </form>
+        </div>
+        <div class="col-md-8 banner-sec">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid"
+                            src="https://static.pexels.com/photos/33972/pexels-photo.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <div class="banner-text">
+                                <h2>Diabetis Prediction</h2>
+                                <p>Diabetis Prediction with gaussian naive bayes.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+        </div>
+    </div>
+</section>
+
+    {% endblock content %}
