--- a/register_login/accounts/templates/accounts/home.html
+++ b/register_login/accounts/templates/accounts/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Diabetis Prediction</a>
+    <a class="navbar-brand" href="#">Diabetes Prediction</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,13 +10,14 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">{(current)}</span></a>
+                
             </li>
             
         </ul>
         <span class="navbar-text">
             {{user.username}}
         </span>
+        <a class="nav-link" href="{% url 'index' %}">Logout <span class="sr-only">{(current)}</span></a>
     </div>
 </nav>
 
@@ -30,43 +31,43 @@
             {% csrf_token %}
             <div class="row">
                 <div class="form-group col">
-                    <label for="email">Pregencies</label><br>
-                    <input type="Pregencies" class="Pregencies" id="Pregencies" name="Pregencies">
+                    <label for="email">Pregnancies</label><br>
+                    <input type="Pregencies" class="Pregencies" id="Pregencies" onkeypress="return isNumber(event)" name="Pregencies" required>
                 </div>
                 <div class="form-group col">
                     <label for="email">Glucose</label><br>
-                    <input type="Glucose" class="Glucose" id="email" name="Glucose">
+                    <input type="Glucose" class="Glucose" id="email" name="Glucose" onkeypress="return isNumber(event)" required>
                 </div>
             </div>
             <div class="row">
                 <div class="form-group col">
                     <label for="email">BloodPressure</label><br>
-                    <input type="BloodPressure" class="BloodPressure" id="BloodPressure" name="BloodPressure">
+                    <input type="BloodPressure" class="BloodPressure" id="BloodPressure" name="BloodPressure" onkeypress="return isNumber(event)" required>
                 </div>
                 <div class="form-group col">
                     <label for="email">SkinThickness</label><br>
-                    <input type="SkinThickness" class="SkinThickness" id="SkinThickness" name="SkinThickness">
+                    <input type="SkinThickness" class="SkinThickness" id="SkinThickness" name="SkinThickness" onkeypress="return isNumber(event)" required>
                 </div>
             </div>
             <div class="row">
                 <div class="form-group col">
                     <label for="email">Insulin</label><br>
-                    <input type="Insulin" class="Insulin" id="Insulin" name="Insulin">
+                    <input type="Insulin" class="Insulin" id="Insulin" name="Insulin" onkeypress="return isNumber(event)" required>
                 </div>
                 <div class="form-group col">
                     <label for="BMI">BMI</label><br>
-                    <input type="BMI" class="BMI" id="BMI" name="BMI">
+                    <input type="BMI" class="BMI" id="BMI" name="BMI" onkeypress="return isNumber(event)" required>
                 </div>
             </div>
             <div class="row">
                 <div class="form-group col">
                     <label for="email">DiabetesPedigreeFunction</label><br>
                     <input type="DiabetesPedigreeFunction" class="DiabetesPedigreeFunction"
-                        id="DiabetesPedigreeFunction" name="DiabetesPedigreeFunction">
+                        id="DiabetesPedigreeFunction" name="DiabetesPedigreeFunction" onkeypress="return isNumber(event)" required>
                 </div>
                 <div class="form-group col">
                     <label for="email">Age</label><br>
-                    <input type="Age" class="Age" id="Age" name="Age">
+                    <input type="Age" class="Age" id="Age" name="Age" onkeypress="return isNumber(event)" required>
                 </div>
             </div>
             <button type="submit" class="btn btn-login float-left">Perform Test</button>
@@ -74,8 +75,8 @@
     </div>
     <div class="result col-md-4" style="background-color: #81818163;">
         <div class="row" style="background-color: rgb(36, 89, 136);">
-            <div class="title col-md-9" style="color: aliceblue; background-color: rgb(36, 89, 136); width: 100%; text-align: center; font-size: 40px;">Medical Report</div>
-            <div> <a href="" style="display: inline-block; width: 60px; margin-top: 20px; text-align: center; padding: 4px; height: 30px; color: white; background-color: rgb(26, 141, 112); text-decoration: none;" >Print</a></div>
+            <div class="title col-md-8" style="color: aliceblue; background-color: rgb(36, 89, 136); width: 100%; text-align: center; font-size: 40px;">Medical Report</div>
+            <div> <a href="{% url 'pdf_download' %}" style="display: inline-block; width: 120px; margin-top: 20px; text-align: center; padding: 4px; height: 30px; color: white; background-color: rgb(26, 141, 112); text-decoration: none;" >Export Report</a></div>
         </div>
         <table class="table">
             <thead>
@@ -133,7 +134,7 @@
               <tr>
                 <th scope="row"></th>
                 <td style="color: brown; font-weight: bold;">Test Result</td>
-                <td style="color: brown; font-weight: bold" >Diabetis {{res}} {{res_prob}}</td>
+                <td style="color: brown; font-weight: bold" >Diabetis {{res}} </td>
               </tr>
             </tbody>
           </table>
@@ -152,6 +153,15 @@
         overflow-x: hidden;
     }
 </style>
-
+<script type="text/javascript">     
+  function isNumber(evt) {
+          evt = (evt) ? evt : window.event;
+          var charCode = (evt.which) ? evt.which : evt.keyCode;
+          if ( (charCode > 31 && charCode < 46) || charCode > 57 || charCode == 47) {
+              return false;
+          }
+          return true;
+      }
+  </script>
 
 {% endblock content %}
