--- a/register_login/accounts/templates/accounts/login.html
+++ b/register_login/accounts/templates/accounts/login.html
@@ -1,4 +1,3 @@
-
 {% extends 'accounts/base.html' %}
 
 {% block content %}
@@ -9,46 +8,64 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 login-sec">
-            <h1>Login</h1>
-            <form action="" method="post">
-                {% csrf_token %}
-                <label for="username" class="">Username</label><br>
-                <input type="text" class="form-control" name="username"><br>
-                <label for="password">Password</label><br>
-                <input type="password" class="form-control" name="password"><br>
+                <h1>Login</h1>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <label for="username" class="">Username</label><br>
+                    <input type="text" class="form-control" name="username" required><br>
+                    <label for="password">Password</label><br>
+                    <div class="pass" style="display: flex; position: relative;">
+                        <input type="password" class="form-control" id='passwordField' name="password" required><i
+                            style="position:absolute;z-index: 10;right: 10px; top: 10px;" class="far fa-eye"
+                            id="togglePassword"></i><br>
+                    </div>
 
-                {% for message in messages %}
-                {{message}}
-                {% endfor %} <br><br>
+                    {% for message in messages %}
+                    {{message}}
+                    {% endfor %} <br><br>
 
-                <button type="submit" class="btn btn-login float-right">Login</button>
-            </form>
-        </div>
-        <div class="col-md-8 banner-sec">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <img class="d-block img-fluid"
-                            src="https://static.pexels.com/photos/33972/pexels-photo.jpg" alt="First slide">
-                        <div class="carousel-caption d-none d-md-block">
-                            <div class="banner-text">
-                                <h2>Diabetis Prediction</h2>
-                                <p>Diabetis Prediction with gaussian naive bayes.</p>
+                    <button type="submit" class="btn btn-login float-left">Login</button><br><br>
+                </form>
+                <a href="{%url 'index'%}">Back to Home</a>
+            </div>
+            <div class="col-md-8 banner-sec">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="https://static.pexels.com/photos/33972/pexels-photo.jpg"
+                                alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <div class="banner-text">
+                                    <h2>Diabetes Prediction</h2>
+                                    <p>Diabetes Prediction with gaussian naive bayes.</p>
+                                </div>
                             </div>
                         </div>
+
                     </div>
 
                 </div>
-
             </div>
-        </div>
         </div>
     </div>
 </section>
+<script>
 
-    {% endblock content %}
+    const togglePassword = document.querySelector('#togglePassword');
+    const password = document.querySelector('#passwordField');
+
+    togglePassword.addEventListener('click', function (e) {
+        // toggle the type attribute
+        const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+        password.setAttribute('type', type);
+        // toggle the eye slash icon
+        this.classList.toggle('fa-eye-slash');
+    });
+
+</script>
+{% endblock content %}
